[package]
name = "generate_keypair"
version = "0.2.0"
edition = "2024"

[dependencies]
solana-sdk = "2"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
clap = { version = "4", features = ["derive"] }
bip39 = { version = "2", default-features = false, features = ["std"] }
