[package]
name = "generate_keypair"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
bs58 = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
solana-sdk = "2"

# tiny-bip39 API via alias (MnemonicType, Mnemonic::new)
bip39 = { package = "tiny-bip39", version = "2.0.0" }
